--- a/index.html
+++ b/index.html
@@ -5,192 +5,46 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title></title>
+    <title>Welcome</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="author" content="Suman J Lama">
-    <meta name="description" content="I am a multi-disciplinary media designer">
+    <meta name="description" content="Website coded by Suman Lama. I am a multidisciplinary designer and artist.">
 
     <!-- CUSTOM CSS -->
-    <link rel="stylesheet" href="main.css">
+    <!-- <link rel="stylesheet" href="main.css"> -->
+    <link rel="stylesheet" href="backup-prefixed.css">
+
+
     <!-- BOOTSTRAP CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+        integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css" type="text/css">
+
     <!-- CUSTOM FONT: ROBOTO -->
     <link rel="stylesheet" href="fonts/Roboto/stylesheet.css">
 </head>
 
 <body>
-    <div class="container-fluid">
-
-        <!-- TOP SECTION: TITLE AND NAV BUTTONS -->
-        <div class="blue row top-row justify-content-center" id="top-sect-wrapper" >
-            <div class=" col-12 col-md-5 mb-4 mb-md-0 text-center text-md-left pl-md-0">
-                <a class="" href="index.html" id="self-title">Suman Lama</a>
-
-            </div>
-            <div class="col-12 col-md-7">
-                <div class="row justify-content-around justify-content-md-end " style="height: 100%;">
-                    <div class="mr-md-4 align-self-center">
-                        <a href="works.html" class="pink nav-c roboto-300" style="color: white;">My Works</a></div>
-                    <div class="align-self-center">
-                        <a href="contact.html" class="pink nav-c roboto-300" style="color: white;">Contact Me</a></div>
-                </div>
+    <div class="container-fluid" style="padding: 0; height: 100vh;">
+        <div class="d-flex align-items-center justify-content-center" id="intro-span">
+            <div class="ml11 text-center" style="color: white;">
+                <span class=" text-wrapper">
+                    <span class="letters" id="wlcm-txt">
+                        Hello, I am Suman Lama. Welcome to my website.
+                    </span>
+                </span>
             </div>
         </div>
-
-        <!-- PROFILE IMAGE -->
-        <div class="text-center row m-top-1st-element">
-            <div class="col-12 d-flex justify-content-center">
-                <div class="text-center row justify-content-center max-wid pad-sides-15">
-                    <img class="b-radius-6 img-fluid" id="prof-pic" src="imgs/prof pic.jpg" alt="pics">
-                </div>
-            </div>
-        </div>
-
-
-        <!-- BIO SECTION -->
-        <div class="row justify-content-center m-top-small align-content-center " id="">
-            <div class="col-12 d-flex justify-content-center">
-                <div class="text-center row justify-content-center max-wid">
-                    <p class="text-center mb-0 pad-sides-15" id="self-bio"><span id="self-tagline">I am Suman Lama. <br> I am a multi-disciplinary digital media
-                        designer.</span></p> <p class="text-center mb-0 pad-sides-15 m-top-small">I am skilled in graphic and website designs and basic front-end development.
-                        I am passionate in creating digital contents and I relish the challenge of meeting my clients desires and
-                        their visions. I like my works to have the elements of creativity and practicality.
-                        <br>
-                        <br>
-                        You can see all of my best works <a href="works.html" style="color: #f89f41; font-weight: 400; text-decoration: underline;">here</a>.
-                        You can click <a onclick="openBehanceSite()" style="color: #f89f41; font-weight: 400; text-decoration: underline;">here</a> to see my branding works for the company, <a onclick="openSite1()" style="color: #f89f41; font-weight: 400; text-decoration: underline;">Jhr Naturecure</a>. I am the sole
-                        digital designer for the company and I am responsible for creating and publishing all of their
-                        graphics and digital promotions.
-                    </p>
-                </div>
-            </div>
-
-        </div>
-
-
-        <!-- SKILL AND RESUME SECTION -->
-        <div class="row justify-content-center" id="skills-wrapper">
-
-            <!-- BACKGROUND -->
-            <span class="primary-c skills-section shadow-up shadow-down skills-sect-home">
-
-            </span>
-
-            <!-- SKILLS-LISTS -->
-            <div class="col-12 d-flex flex-column flex-md-row justify-content-center " id="skills-list-wrapper">
-                <div class="row justify-content-around">
-
-                    <!-- DESIGN TOOLS -->
-                    <div class="d-flex col-12 col-md justify-content-center z-ind text-wrap ">
-                        <div class="skillz  b-radius-6 no-borders " style="padding: 20px;">
-                            <h3 class="text-center no-mg roboto-400">Design Tools</h3>
-                            <ul style="margin-top:10px;">
-                                <li>Adobe Photoshop</li>
-                                <li>Adobe Illustrator</li>
-                                <li>Adobe XD</li>
-                            </ul>
-                        </div>
-                    </div>
-
-                    <!-- WEB DESIGN SKILLS -->
-                    <div class="d-flex col-12 col-md justify-content-center ">
-                        <div class="skillz z-ind b-radius-6 no-borders" style="padding: 20px;" id="web-skillz">
-                            <h3 class="text-center no-mg roboto-400">Web Skills</h3>
-                            <ul class="" style="margin-top: 10px;">
-                                <li>
-                                    Html
-                                </li>
-                                <li>
-                                    Css
-                                </li>
-                                <li>
-                                    Javascript
-                                </li>
-                                <li>
-                                    CMS
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <!-- BEHANCE AND GITHUB ICONS -->
-            <div class="col-12 d-flex justify-content-center">
-                <div class="row justify-content-around" id="skill-icons-wrapper">
-
-                    <!-- BEHANCE ICON -->
-                    <div class="d-flex col col-md justify-content-center z-ind">
-                        <div class="z-ind m-top-big b-radius-6 no-borders skill-icons d-flex justify-content-center">
-                            <a onclick="openBehanceSite()">
-                                <img src="imgs/icons/behance icon 1.svg" alt="Behance" width="70px">
-                            </a>
-                        </div>
-                    </div>
-
-                    <!-- GITHUB ICON -->
-                    <div class="d-flex col col-md justify-content-center skill-icons z-ind">
-                        <div class="z-ind m-top-big b-radius-6 no-borders skill-icons d-flex justify-content-center">
-                            <a onclick="openGithubSite()">
-                                <img src="imgs/icons/github icon 1.svg" alt="Github" width="70px">
-                            </a></div>
-                    </div>
-                </div>
-            </div>
-
-            <!-- DOWNLOAD RESUME BUTTON -->
-            <div class="m-top-big z-ind col-12 d-flex justify-content-center" style="margin-bottom: 30px;">
-                <a onclick="openResume()" class="row shadow-up btn-c z-ind b-radius-6 no-borders justify-content-center roboto-300"
-                    id="dwnl-btn"><span style="text-decoration: none;">See my Resume</span>
-                    <!-- <img src="imgs/icons/download.svg" alt=""> -->
-                </a>
-            </div>
-
-        </div>
-
-        <!-- CONTACT SECTION -->
-        <div class="row justify-content-center text-center m-top-big z-ind">
-            <span class="skills-section shadow-up" id="contact-card" style="background-color: white;">
-            </span>
-            <p class="z-ind col-12 m-top-big mb-0 secondary-c" id="fixed-contact-me">Contact me:</p>
-
-            <!-- TELEPHONE AND EMAIL WRAPPER -->
-            <div class="d-flex justify-content-center flex-wrap" style="max-width: 650px;">
-                <div class="z-ind col-12 d-flex justify-content-center">
-                    <a href="mailto:sumanjlama@gmail.com" id="email-link">
-                        <p class="z-ind mb-0 secondary-c pl-md-0 roboto-300" style="margin-top: 20px;">
-                            <img src="imgs/icons/ic_mail_outline_24px.svg" alt="">
-                            sumanjlama@gmail.com</p>
-                    </a>
-                </div>
-
-                <!-- CONTACT ICONS -->
-                <div class="z-ind d-flex justify-content-around m-top-big" id="ct-icns" style="width: 300px;">
-                    <a class="z-ind no-borders" style="background-color: transparent;">
-                        <img src="imgs/icons/messenger icon 1.svg" alt="FB messenger" width="60px">
-                    </a>
-                    <a class="z-ind no-borders " style="background-color: transparent;">
-                        <img src="imgs/icons/linkIN icon1.svg" alt="linkedIn" width="60px">
-                        </button></a>
-                </div>
-            </div>
-        </div>
-
-        <!-- FOOTER AND UP BUTTON -->
-        <div class="row justify-content-center m-top-big z-ind" style="height: 70px; overflow: hidden;">
-            <span class="z-ind shadow-up b-radius-100 primary-c col-12 text-center align-middle" id="up-btn-card" style="height: 70px;">
-            </span>
-            <img class="z-ind" src="imgs/icons/Path 3.svg" alt="UP">
-        </div>
-    </div>
-
     </div>
 
 </body>
-<script src="code.js" async defer></script>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
+
 <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
 <script src="/node_modules/bootstrap/dist/js/bootstrap.js"></script>
+<script src="code.js" async defer></script>
+
 
 </html>
