--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Works</title>
+    <title>Home</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="author" content="Suman J Lama">
@@ -19,7 +19,6 @@
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css" type="text/css">
     <!-- CUSTOM FONT: ROBOTO -->
     <link rel="stylesheet" href="fonts/Roboto/stylesheet.css">
-
 </head>
 
 <body>
@@ -47,81 +46,55 @@
             </div>
         </div>
 
-        <!-- WORKS THUMBNAIL -->
-        <div class="text-center m-top-1st-element-lower row justify-content-center fade-in" id="work-thumbs">
+        <!-- BIO SECTION -->
+        <div class="row justify-content-center m-top-1st-element m-top-small align-content-center fade-in" id="">
             <div class="col-12 d-flex justify-content-center">
-                <div class="text-center row justify-content-center " style="max-width: 1200px;">
-                    <!--  -->
-                    <div class="mt-md-0 mt-4 d-flex justify-content-center mb-md-4 work-img-wrapper work-wid">
-                        <div class="card card-wid works-border">
-                            <img class="card-img b-radius-6" src="imgs/Work-thumbnails/JHR webpage.png" alt="work 3">
-                            <span class="card-img-overlay hide">
-                                <p class="work-titles">JHR Nature Cure</p>
-                                <p>A CMS Website with added custom HTML and CSS codes.</p>
-                                <a class="work-link-btn" onclick="openSite('https://www.jhrnaturecure.com/')">See
-                                    more</a>
-                            </span>
+                <div class="text-center row justify-content-center max-wid">
+                    <p class="text-center mb-0 pad-sides-15 dark-c" id="self-bio"><span id="self-tagline">Hello, I am Suman
+                            Lama.<br>
+                            A multidisciplinary artist and designer.</span></p>
+                    <!-- PROFILE IMAGE -->
+                        <div class="col-12 m-top-big d-flex px-0 justify-content-center">
+                            <div class="text-center max-wid pad-sides-15">
+                                <img class="b-radius-6 img-fluid" id="prof-pic" src="imgs/prof-pic.jpg" alt="My Profile Picture">
+                            </div>
                         </div>
-                    </div>
+                    <p class="text-center mb-0 pad-sides-15 m-top-big dark-c">Skilled in fine arts, graphics, web design and
+                        basic front-end development, I have a passion for producing creative contents in a wide range of
+                        design practices. My main motivation for this field of work is to translate my clients’ visions
+                        into reality. I fulfill their expectations by creating works with elements of creativity
+                        and
+                        practicality.
+                        <br>
+                        <br>
+                        Forever exploring ways to self-improve, I am an inquisitive and a motivated person who is keen to learn and accomplish new challenges. I self-taught myself to code, after I recognized it as a
+                        brilliant way to showcase my skills through a new medium.
+                        Other than my obsession with work, I also have a keen interest on music, photography, and
+                        sports.
 
-                    <!--  -->
-                    <div class="mt-md-0 mt-4 d-flex justify-content-center mb-md-4 work-img-wrapper">
-                        <div class="card card-wid works-border">
-                            <img class="card-img b-radius-6" src="imgs/Work-thumbnails/snowdonia.png" alt="work 3">
-                            <span class="card-img-overlay hide">
-                                <p class="work-titles">Snowdonia, Snowdon</p>
-                                <p>A photo gallery website built using HTML, CSS and JS.</p>
-                                <a class="work-link-btn"
-                                    onclick="openSite('https://sumnjlama.github.io/projectSnowdon/index.html')">See
-                                    more</a>
-                            </span>
-                        </div>
-                    </div>
+                        <br>
+                        <br>
+                        <i>Delve deeper into my portfolio and check out my best <a href="works.html"
+                                style="color: #f89f41; font-weight: 400; text-decoration: underline;">works</a>. Or
 
-                    <!--  -->
-                    <div class="mt-md-0 mt-4 d-flex justify-content-center mb-md-4 work-img-wrapper">
-                        <div class="card card-wid works-border">
-                            <img class="card-img b-radius-6" src="imgs/Work-thumbnails/TB.png" alt="work 3">
-                            <span class="card-img-overlay hide">
-                                <p class="work-titles">Triple Booster</p>
-                                <p>Branding design for a health supplement capsules from JHR nature cure.</p>
-                                <a class="work-link-btn"
-                                    onclick="openSite('https://www.behance.net/gallery/84703685/Triple-Booster-Design-project')">See
-                                    more</a>
-                            </span>
-                        </div>
-                    </div>
 
-                    <!--  -->
-                    <div class="mt-md-0 mt-4 d-flex mb-4 justify-content-center work-img-wrapper">
-                        <div class="card card-wid works-border">
-                            <img class="card-img b-radius-6" src="imgs/Work-thumbnails/TBplus.png" alt="work 3">
-                            <span class="card-img-overlay hide">
-                                <p class="work-titles">Triple Booster Plus</p>
-                                <p>Branding design for a health supplement capsules from JHR nature cure.</p>
-                                <a class="work-link-btn"
-                                    onclick="openSite('https://www.behance.net/gallery/106544981/Triple-Booster-PLUS')">See
-                                    more</a>
-                            </span>
-                        </div>
-                    </div>
+                            <a onclick="openSite('https://www.behance.net/sumanjlama')"
+                                style="color: #f89f41; font-weight: 400; text-decoration: underline;">here</a>’s a
+                            shortcut
+                            to see my branding works for the company, <a
+                                onclick="openSite('https://www.jhrnaturecure.com/')"
+                                style="color: #f89f41; font-weight: 400; text-decoration: underline;">Jhr
+                                Naturecure</a>,
+                            where I am the sole digital designer. I am responsible for generating and
+                            deploying all their graphics and digital contents.</i>
 
-                    <!--  -->
-                    <div class="mt-md-0 mt-4 d-flex mb-4 justify-content-center work-img-wrapper">
-                        <div class="card card-wid works-border">
-                            <img class="card-img b-radius-6" src="imgs/Work-thumbnails/RawGold.png" alt="work 3">
-                            <span class="card-img-overlay hide">
-                                <p class="work-titles">Raw Gold</p>
-                                <p>Branding design for an organic protein powder from JHR nature cure.</p>
-                                <a class="work-link-btn"
-                                    onclick="openSite('https://www.behance.net/gallery/106547429/RAW-GOLD')">See
-                                    more</a>
-                            </span>
-                        </div>
-                    </div>
+
+                    </p>
                 </div>
             </div>
+
         </div>
+
 
         <!-- SKILL AND RESUME SECTION -->
         <div class="row justify-content-center fade-in" id="skills-wrapper">
@@ -138,7 +111,7 @@
                     <!-- DESIGN TOOLS -->
                     <div class="d-flex col-12 col-md justify-content-center z-ind text-wrap ">
                         <div class="skillz b-radius-6 no-borders " style="padding: 30px;">
-                            <h3 class="text-center no-mg roboto-400">Design Tools</h3>
+                            <h3 class="text-center no-mg ">Design Tools</h3>
                             <ul style="margin-top:20px;">
                                 <li>Adobe Photoshop</li>
                                 <li>Adobe Illustrator</li>
@@ -150,7 +123,7 @@
                     <!-- WEB DESIGN SKILLS -->
                     <div class="d-flex col-12 col-md justify-content-center ">
                         <div class="skillz z-ind b-radius-6 no-borders" style="padding: 30px;" id="web-skillz">
-                            <h3 class="text-center no-mg roboto-400">Web Skills</h3>
+                            <h3 class="text-center no-mg ">Web Skills</h3>
                             <ul class="" style="margin-top: 20px;">
                                 <li>
                                     Html
@@ -198,14 +171,12 @@
                 <a onclick="openSite('files/Resume.pdf')"
                     class="row shadow-up btn-c z-ind b-radius-6 no-borders justify-content-center roboto-300"
                     id="dwnl-btn"><span style="text-decoration: none;">See my Resume</span>
-                    <!-- <img src="imgs/icons/download.svg" alt=""> -->
                 </a>
             </div>
-
         </div>
 
         <!-- CONTACT SECTION -->
-        <div class="row justify-content-center text-center m-top-big z-ind " id="cont-wrapper">
+        <div class="row justify-content-center text-center m-top-big z-ind fade-in" id="cont-wrapper">
             <span class="skills-section shadow-up b-radius-100" id="contact-card"
                 style="background-color: white; max-width: 850px;">
             </span>
@@ -240,6 +211,8 @@
             </span>
             <img onclick="toTheTop()" class="z-ind" id="up-btn" src="imgs/icons/Path 3.svg" alt="UP">
         </div>
+    </div>
+
     </div>
 
 </body>
