--- a/index.html
+++ b/index.html
@@ -10,10 +10,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="author" content="Suman J Lama">
     <meta name="description" content="Website coded by Suman Lama. I am a multidisciplinary designer and artist.">
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="imgs/icons/Asset 3@2x.png">
 
-    <!-- CUSTOM CSS -->
+    <!-- css -->
     <!-- <link rel="stylesheet" href="main.css"> -->
-    <link rel="stylesheet" href="backup-prefixed.css">
+    <!-- <link rel="stylesheet" href="backup-prefixed.css"> -->
+    <link rel="stylesheet" href="main.css">
+
+
 
 
     <!-- BOOTSTRAP CSS -->
@@ -29,9 +34,8 @@
     <div class="container-fluid" style="padding: 0; height: 100vh;">
         <div class="d-flex align-items-center justify-content-center" id="intro-span">
             <div class="ml11 text-center" style="color: white;">
-                <span class=" text-wrapper">
-                    <span class="letters" id="wlcm-txt">
-                        Hello, I am Suman Lama. Welcome to my website.
+                <span class="text-wrapper">
+                    <span class="letters" id="welcoming-text">
                     </span>
                 </span>
             </div>
@@ -41,7 +45,6 @@
 </body>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
-
 <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
 <script src="/node_modules/bootstrap/dist/js/bootstrap.js"></script>
 <script src="code.js" async defer></script>
