--- a/home.html
+++ b/home.html
@@ -111,6 +111,7 @@
                     </span>
                 </span>
             </div>
+            <div class="col-12 text-center" id="intro-about-button"><a id="about-button"><span >About Me</span></a></div>
         </section>
 
         <!-- BIO SECTION -->
@@ -148,7 +149,7 @@
                             <a onclick="openSite('files/CV-Website.pdf')"
                                 class="row z-ind b-radius-2 no-borders justify-content-center align-content-center roboto-300 "
                                 id="resume-download-button">
-                                <span class="button-text-shadows " style="text-decoration: none;">Download Resume</span>
+                                <span class="button-text-shadows " style="text-decoration: none;"></span>Download Resume</span>
                             </a>
                         </div>
                 </div>
